crates/kirin-derive-core-2/src/kirin/field/iter/snapshots/kirin_derive_core_2__kirin__field__iter__struct_impl__tests__generic_struct.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/iter/struct_impl.rs
expression: "prettyplease::unparse(&t)"
---
pub struct MyStructParamsIter<'a> {
    inner: std::iter::Once<&'a T>,
}
impl<'a> Iterator for MyStructParamsIter<'a> {
    type Item = &'a T;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
