crates/kirin-derive-core-2/src/kirin/field/iter/snapshots/kirin_derive_core_2__kirin__field__iter__struct_impl__tests__struct_iterator_type_to_tokens-2.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/iter/struct_impl.rs
expression: "prettyplease::unparse(&t)"
---
pub struct MyStructArgumentsIter<'a, T: Bound> {
    inner: std::iter::Chain<
        std::slice::IterMut<'a, SSAValue>,
        std::iter::Once<&'a mut SSAValue>,
    >,
}
impl<'a, T: Bound> Iterator for MyStructArgumentsIter<'a, T> {
    type Item = &'a mut SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
